feat(workspace): update to newest version of nx & angular

--- a/apps/receipt-printer-app-e2e/project.json
+++ b/apps/receipt-printer-app-e2e/project.json
@@ -1,4 +1,5 @@
 {
+  "name": "receipt-printer-app-e2e",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "apps/receipt-printer-app-e2e/src",
   "projectType": "application",
