--- a/apps/receipt-printer-app/project.json
+++ b/apps/receipt-printer-app/project.json
@@ -1,4 +1,5 @@
 {
+  "name": "receipt-printer-app",
   "projectType": "application",
   "sourceRoot": "apps/receipt-printer-app/src",
   "prefix": "coding-challenge",
@@ -82,7 +83,7 @@
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": ["coverage/apps/receipt-printer-app"],
+      "outputs": ["{workspaceRoot}/coverage/apps/receipt-printer-app"],
       "options": {
         "jestConfig": "apps/receipt-printer-app/jest.config.ts",
         "passWithNoTests": true
